# event-management-api

./: .dockerignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  manage.py
app/models/: association_tables.py  base_model.py  event_model.py  permission_model.py  registration_model.py  role_model.py  user_model.py
app/routes/: __init__.py  auth_route.py  docs_route.py  event_route.py  healthcheck_route.py
app/schemas/: event_schema.py  user_schema.py
app/services/: event_service.py  user_service.py
app/templates/: oauth-receiver.html  rapidoc.html
app/utils/: auth_utils.py  config.py  constants.py  database.py  logger.py
collection/: Healthcheck.bru  bruno.json
collection/Auth/: Login.bru  Signup.bru
collection/Events/: Delete Event.bru  Event Create.bru  Event Update.bru  Get event By ID.bru  Get events.bru  Register Events.bru
migrations/: env.py
migrations/versions/: 0652c3be3c19_added_datat_type_to_date_for_date_.py  22a407af5c35_initial_migration.py  395de0226436_added_registration_model.py  4bc45d294cfc_db_migrations.py  6ddbd90b0f5a_permission_model_refacto.py  926afd3761bb_made_title_non_nullable_for_event_model.py  b6a37bff28ea_added_models.py  c94179120948_permission_and_roles_model_added_.py  cd71d7b5edf2_added_location_field.py  d094d0bce820_intial.py  ebcadf0821b1_renamed_events_table.py
scripts/: __init__.py  db_service.py  evironment.py  manage.py
